// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> renders correctly 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  color: #FFFFFF;
  background-color: #024A8F;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #999999;
  background-color: #D1D1D1;
  opacity: 0.5;
}

.c0:active {
  background-color: #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #2670AE;
}

<button
  className="c0"
/>
`;

exports[`<PrimaryButton /> renders when disabled 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  color: #FFFFFF;
  background-color: #024A8F;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #999999;
  background-color: #D1D1D1;
  opacity: 0.5;
}

.c0:active {
  background-color: #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #2670AE;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`<PrimaryButton /> renders with a small prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  color: #FFFFFF;
  background-color: #024A8F;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #999999;
  background-color: #D1D1D1;
  opacity: 0.5;
}

.c0:active {
  background-color: #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  background-color: #2670AE;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`<SecondaryButton /> renders correctly 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #FFFFFF;
  border: 2px solid #024A8F;
  color: #024A8F;
  -webkit-transition: border linear;
  transition: border linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 2px solid #999999;
  color: #999999;
  opacity: 0.5;
}

.c0:active {
  background-color: #F0F4F7;
  color: #38A9DB;
  outline: 2px solid #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  border: 3px solid #024A8F;
  background-color: #F0F4F7;
  color: #024A8F;
}

<button
  className="c0"
/>
`;

exports[`<TertiaryButton /> renders correctly 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #D1D1D1;
  color: #070707;
  opacity: 0.8;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.5;
}

.c0:hover:not(:disabled) {
  opacity: 1;
  background-color: #D1D1D1;
}

<button
  className="c0"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`renders correctly with hidden prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
/>
`;

exports[`renders correctly with small prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
  className="c0"
/>
`;
